Fix for squished front-page image on top post

--- a/style.css
+++ b/style.css
@@ -849,7 +849,7 @@ Front Page
     -moz-filter:blur(.5rem);
     -o-filter:blur(.5rem);
     -ms-filter:blur(.5rem);
-    height:100%;
+    min-height:100%;
 		margin:0 !important;
 		opacity:.4;
 		overflow:hidden;
